--- a/src/models/Makefile.subdir
+++ b/src/models/Makefile.subdir
@@ -37,7 +37,8 @@ src_libcodes_net_a_SOURCES = \
  src/models/networks/model-net/model-net-sched.c \
  src/models/networks/model-net/model-net-sched-impl.h \
  src/models/networks/model-net/model-net-sched-impl.c \
- src/models/mpi-trace-replay/model-net-mpi-wrklds.c
+ src/models/mpi-trace-replay/model-net-mpi-wrklds.c \
+ src/models/mpi-trace-replay/model-net-synthetic.c
 
 bin_PROGRAMS += src/models/mpi-trace-replay/model-net-mpi-wrklds
 
@@ -45,3 +46,10 @@ src_models_mpi_trace_replay_model_net_mpi_wrklds_SOURCES = src/models/mpi-trace-
 src_models_mpi_trace_replay_model_net_mpi_wrklds_LDADD = $(testlib) $(CODES_BASE_LIBS)
 src_models_mpi_trace_replay_model_net_mpi_wrklds_LDFLAGS = $(CODES_BASE_LDFLAGS)
 src_models_mpi_trace_replay_model_net_mpi_wrklds_CFLAGS = ${CODES_BASE_CFLAGS}
+
+bin_PROGRAMS += src/models/mpi-trace-replay/model-net-synthetic
+
+src_models_mpi_trace_replay_model_net_synthetic_SOURCES = src/models/mpi-trace-replay/model-net-synthetic.c
+src_models_mpi_trace_replay_model_net_synthetic_LDADD = $(testlib) $(CODES_BASE_LIBS)
+src_models_mpi_trace_replay_model_net_synthetic_LDFLAGS = $(CODES_BASE_LDFLAGS)
+src_models_mpi_trace_replay_model_net_synthetic_CFLAGS = ${CODES_BASE_CFLAGS}
