1) Adding dragonfly adaptive and prog-adaptive routing algorithms--- still testing with more workloads and crosschecking the computation 2) Two bug fixes in credit-based flow control

--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -2,7 +2,8 @@
 check_PROGRAMS += tests/modelnet-test tests/modelnet-p2p-bw \
 				  tests/concurrent-msg-recv tests/modelnet-simplep2p-test \
 				  tests/modelnet-test-collective \
-				  tests/modelnet-prio-sched-test
+				  tests/modelnet-prio-sched-test \
+				  tests/modelnet-test-dragonfly
 
 TESTS += tests/modelnet-test.sh \
 	 tests/modelnet-test-torus.sh \
@@ -36,6 +37,10 @@ testlib = src/libcodes-net.a
 tests_modelnet_test_LDADD = $(testlib) ${CODES_BASE_LIBS}
 tests_modelnet_test_CFLAGS = ${CODES_BASE_CFLAGS}
 tests_modelnet_test_SOURCES = tests/modelnet-test.c
+
+tests_modelnet_test_dragonfly_LDADD = $(testlib) ${CODES_BASE_LIBS}
+tests_modelnet_test_dragonfly_CFLAGS = ${CODES_BASE_CFLAGS}
+tests_modelnet_test_dragonfly_SOURCES = tests/modelnet-test-dragonfly.c
 
 tests_modelnet_simplep2p_test_LDADD = $(testlib) ${CODES_BASE_LIBS}
 tests_modelnet_simplep2p_test_CFLAGS = ${CODES_BASE_CFLAGS}
