--- a/tests/conf/modelnet-test-dragonfly.conf
+++ b/tests/conf/modelnet-test-dragonfly.conf
@@ -2,9 +2,9 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="36";
-      server="2";
-      modelnet_dragonfly="2";
+      repetitions="264";
+      server="4";
+      modelnet_dragonfly="4";
       dragonfly_router="1";
    }
 }
@@ -17,13 +17,13 @@ PARAMS
    chunk_size="32";
    # modelnet_scheduler="round-robin";
    num_vcs="1";
-   num_routers="4";
-   local_vc_size="16384";
-   global_vc_size="32768";
-   cn_vc_size="16384";
+   num_routers="8";
+   local_vc_size="262144";
+   global_vc_size="262144";
+   cn_vc_size="65536";
    local_bandwidth="5.25";
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
-   message_size="512";
-   routing="minimal";
+   message_size="256";
+   routing="adaptive";
 }
