Adding group level mapping in the dragonfly: multiple routers can now be specified in the config file

--- a/tests/conf/modelnet-test-dragonfly.conf
+++ b/tests/conf/modelnet-test-dragonfly.conf
@@ -2,10 +2,10 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="36";
-      server="2";
-      modelnet_dragonfly="2";
-      dragonfly_router="1";
+      repetitions="9";
+      server="8";
+      modelnet_dragonfly="8";
+      dragonfly_router="4";
    }
 }
 PARAMS
@@ -25,5 +25,5 @@ PARAMS
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
    message_size="256";
-   routing="adaptive";
+   routing="minimal";
 }
