Reverse handler for dragonfly is now functional

--- a/tests/conf/modelnet-test-dragonfly.conf
+++ b/tests/conf/modelnet-test-dragonfly.conf
@@ -2,10 +2,10 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="9";
-      server="8";
-      modelnet_dragonfly="8";
-      dragonfly_router="4";
+      repetitions="33";
+      server="32";
+      modelnet_dragonfly="32";
+      dragonfly_router="8";
    }
 }
 PARAMS
@@ -17,13 +17,13 @@ PARAMS
    chunk_size="32";
    # modelnet_scheduler="round-robin";
    num_vcs="1";
-   num_routers="4";
-   local_vc_size="262144";
-   global_vc_size="262144";
-   cn_vc_size="262144";
+   num_routers="8";
+   local_vc_size="32768";
+   global_vc_size="65536";
+   cn_vc_size="32768";
    local_bandwidth="5.25";
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
-   message_size="256";
-   routing="minimal";
+   message_size="272";
+   routing="adaptive";
 }
