Updating MPI Sim Layer to use quicklists

--- a/src/models/Makefile.subdir
+++ b/src/models/Makefile.subdir
@@ -40,25 +40,18 @@ src_libcodes_net_a_SOURCES = \
  src/models/networks/model-net/model-net-sched-impl.h \
  src/models/networks/model-net/model-net-sched-impl.c \
  src/models/network-workloads/model-net-mpi-wrklds.c \
+ src/models/network-workloads/model-net-mpi-replay.c \
  src/models/network-workloads/model-net-synthetic.c \
  src/models/network-workloads/model-net-dumpi-traces-dump.c
 
+bin_PROGRAMS += src/models/network-workloads/model-net-mpi-replay
 bin_PROGRAMS += src/models/network-workloads/model-net-mpi-wrklds
 bin_PROGRAMS += src/models/network-workloads/model-net-dumpi-traces-dump
 bin_PROGRAMS += src/models/network-workloads/model-net-synthetic
 
+src_models_network_workloads_model_net_mpi_replay_SOURCES = src/models/network-workloads/model-net-mpi-replay.c
+
 src_models_network_workloads_model_net_mpi_wrklds_SOURCES = src/models/network-workloads/model-net-mpi-wrklds.c
-#src_models_network_workloads_model_net_mpi_wrklds_LDADD = $(testlib) $(CODES_BASE_LIBS)
-#src_models_network_workloads_model_net_mpi_wrklds_LDFLAGS = $(CODES_BASE_LDFLAGS)
-#src_models_network_workloads_model_net_mpi_wrklds_CFLAGS = ${CODES_BASE_CFLAGS}
-
 src_models_network_workloads_model_net_synthetic_SOURCES = src/models/network-workloads/model-net-synthetic.c
-#src_models_network_workloads_model_net_synthetic_LDADD = $(testlib) $(CODES_BASE_LIBS)
-#src_models_network_workloads_model_net_synthetic_LDFLAGS = $(CODES_BASE_LDFLAGS)
-#src_models_network_workloads_model_net_synthetic_CFLAGS = ${CODES_BASE_CFLAGS}
-
 src_models_network_workloads_model_net_dumpi_traces_dump_SOURCES = src/models/network-workloads/model-net-dumpi-traces-dump.c
-#src_models_network_workloads_model_net_dumpi_traces_dump_LDADD = $(testlib) $(CODES_BASE_LIBS)
-#src_models_network_workloads_model_net_dumpi_traces_dump_LDFLAGS = $(CODES_BASE_LDFLAGS)
-#src_models_network_workloads_model_net_dumpi_traces_dump_CFLAGS = ${CODES_BASE_CFLAGS}
 
