Adding dragonfly test case with MG

--- a/src/models/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
+++ b/src/models/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
@@ -2,9 +2,9 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="36";
-      nw-lp="2";
-      modelnet_dragonfly="2";
+      repetitions="114";
+      nw-lp="3";
+      modelnet_dragonfly="3";
       dragonfly_router="1";
    }
 }
@@ -17,7 +17,7 @@ PARAMS
    chunk_size="512";
    # modelnet_scheduler="round-robin";
    num_vcs="1";
-   num_routers="4";
+   num_routers="6";
    local_vc_size="32768";
    global_vc_size="65536";
    cn_vc_size="32768";
@@ -25,5 +25,5 @@ PARAMS
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
    message_size="544";
-   routing="minimal";
+   routing="adaptive";
 }
