--- a/src/models/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
+++ b/src/models/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
@@ -14,7 +14,7 @@ PARAMS
    modelnet_order=( "dragonfly" );
    # scheduler options
    modelnet_scheduler="fcfs";
-   chunk_size="64";
+   chunk_size="512";
    # modelnet_scheduler="round-robin";
    num_vcs="1";
    num_routers="4";
@@ -24,6 +24,6 @@ PARAMS
    local_bandwidth="5.25";
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
-   message_size="544";
-   routing="minimal";
+   message_size="536";
+   routing="adaptive";
 }
