Changing the hash function to bj_hash_little2, more additions to the MPI Sim layer operation matching

--- a/tests/conf/modelnet-test-dragonfly.conf
+++ b/tests/conf/modelnet-test-dragonfly.conf
@@ -23,6 +23,6 @@ PARAMS
    local_bandwidth="5.25";
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
-   message_size="336";
-   routing="nonminimal";
+   message_size="352";
+   routing="prog-adaptive";
 }
