--- a/src/models/network-workloads/conf/modelnet-mpi-test-torus.conf
+++ b/src/models/network-workloads/conf/modelnet-mpi-test-torus.conf
@@ -19,7 +19,7 @@ PARAMS
    n_dims="3";
    dim_length="4,4,2";
    link_bandwidth="10.0";
-   buffer_size="1310720";
+   buffer_size="8192";
    num_vc="1";
-   chunk_size="64"; 
+   chunk_size="512"; 
 }
