Adding sampling examples in synthetic workload test program, fixing a reverse handler bug in synthetic workload test

--- a/tests/conf/modelnet-test-dragonfly.conf
+++ b/tests/conf/modelnet-test-dragonfly.conf
@@ -25,4 +25,6 @@ PARAMS
    cn_bandwidth="5.25";
    message_size="368";
    routing="nonminimal";
+   cn_sample_file = "dragonfly-sample-ur";
+   rt_sample_file = "dragonfly-router-ur";
 }
