Updating documentation for sampling, minor file open fixes

--- a/src/network-workloads/conf/modelnet-synthetic-dragonfly.conf
+++ b/src/network-workloads/conf/modelnet-synthetic-dragonfly.conf
@@ -5,13 +5,13 @@ LPGROUPS
       repetitions="264";
       server="4";
       modelnet_dragonfly="4";
-      dragonfly_router="1";
+      modelnet_dragonfly_router="1";
    }
 }
 PARAMS
 {
    packet_size="512";
-   modelnet_order=( "dragonfly" );
+   modelnet_order=( "dragonfly", "dragonfly_router" );
    # scheduler options
    modelnet_scheduler="fcfs";
    chunk_size="32";
@@ -25,5 +25,5 @@ PARAMS
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
    message_size="512";
-   routing="nonminimal";
+   routing="adaptive";
 }
