Adding AMG 1728 config file, minor updates to dragonfly model

--- a/src/network-workloads/conf/modelnet-mpi-test-dfly-amg-1728.conf
+++ b/src/network-workloads/conf/modelnet-mpi-test-dfly-amg-1728.conf
@@ -2,27 +2,27 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="36";
-      server="2";
-      modelnet_dragonfly="2";
+      repetitions="510";
+      nw-lp="5";
+      modelnet_dragonfly="5";
       modelnet_dragonfly_router="1";
    }
 }
 PARAMS
 {
    packet_size="512";
-   modelnet_order=( "dragonfly","dragonfly_router" );
+   modelnet_order=( "dragonfly", "dragonfly_router");
    # scheduler options
    modelnet_scheduler="fcfs";
    chunk_size="256";
    # modelnet_scheduler="round-robin";
-   num_routers="4";
-   local_vc_size="2048";
-   global_vc_size="8192";
-   cn_vc_size="1024";
+   num_routers="10";
+   local_vc_size="16384";
+   global_vc_size="32768";
+   cn_vc_size="16384";
    local_bandwidth="5.25";
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
-   message_size="368";
-   routing="nonminimal";
+   message_size="560";
+   routing="minimal";
 }
