--- a/src/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
+++ b/src/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
@@ -24,5 +24,5 @@ PARAMS
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
    message_size="560";
-   routing="adaptive";
+   routing="minimal";
 }
