--- a/src/network-workloads/conf/modelnet-synthetic-slimfly-min.conf
+++ b/src/network-workloads/conf/modelnet-synthetic-slimfly-min.conf
@@ -2,25 +2,27 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="50";				# The number of repetitions of this modelnet group
-      server="3";					# The number of servers attached to a terminal (should always equal num_terminals)
-      modelnet_slimfly="3";			# The number of terminals attached to a router
-      slimfly_router="1";			# The number of routers in a modelnet group
+      repetitions="50";
+      server="3";
+      modelnet_slimfly="3";
+      slimfly_router="1";
    }
 }
 PARAMS
 {
-   packet_size="256";				# Size of packets/messages in the simulation
+   packet_size="256";
    modelnet_order=( "slimfly" );
    # scheduler options
    modelnet_scheduler="fcfs";
    chunk_size="256";
    # modelnet_scheduler="round-robin";
    num_vcs="4";
-   num_routers="5";					# The number of routers in a slimfly group
-   num_terminals="3";				# The number of terminals connected to a router (should be same as "modelnet_slimfly" above)
+   num_routers="5";
+   num_terminals="3";
    global_channels="5";
    local_channels="2";
+   generator_set_X=("1","4");				#   : Subgraph 0 generator set
+   generator_set_X_prime=("2","3");			#   : Subgraph 1 generator set
    local_vc_size="25600";
    global_vc_size="25600";
    cn_vc_size="25600";
@@ -29,6 +31,6 @@ PARAMS
    cn_bandwidth="9.0";
    router_delay="0";
    link_delay="0";
-   message_size="512";				# Upper bound on MPI message size in ROSS
+   message_size="512";
    routing="minimal";
 }
