--- a/tests/conf/modelnet-test-slimfly.conf
+++ b/tests/conf/modelnet-test-slimfly.conf
@@ -16,6 +16,7 @@ PARAMS
    modelnet_scheduler="fcfs";
    chunk_size="256";
    # modelnet_scheduler="round-robin";
+   num_vcs="4";
    num_routers="5";
    num_terminals="3";
    global_channels="5";
