replaced stray dragonfly labels with fattree

--- a/src/network-workloads/conf/modelnet-synthetic-fattree.conf
+++ b/src/network-workloads/conf/modelnet-synthetic-fattree.conf
@@ -2,10 +2,10 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="36";
-      server="2";
-      modelnet_fattree="2";
-      fattree_switch="1";
+      repetitions="2";
+      server="4";
+      modelnet_fattree="4";
+      fattree_switch="3";
    }
 }
 PARAMS
@@ -18,15 +18,15 @@ PARAMS
    modelnet_order=( "fattree" );
    # scheduler options
    modelnet_scheduler="fcfs";
-#   chunk_size="32";
+   chunk_size="32";
    # modelnet_scheduler="round-robin";
-#   num_vcs="1";
+   num_vcs="1";
    vc_size="16384";
    cn_vc_size="16384";
    link_bandwidth="5";
    cn_bandwidth="5";
    message_size="512";
-#   routing="minimal";
+   routing="minimal";
    router_delay="50";
    soft_delay="1000";
 }
