--- a/src/network-workloads/conf/modelnet-synthetic-fattree.conf
+++ b/src/network-workloads/conf/modelnet-synthetic-fattree.conf
@@ -2,15 +2,15 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="2";
-      server="4";
-      modelnet_fattree="4";
-      fattree_switch="3";
+      repetitions="4";				#Number of leaf level switches
+      server="2";
+      modelnet_fattree="2";
+      fattree_switch="2";
    }
 }
 PARAMS
 {
-   ft_type="0";							# Only appears to be one type (type=0) in fattree.c
+   ft_type="1";							# Only appears to be one type (type=0) in fattree.c
    num_levels="2";						# Must be 1 < num_levels < 4
    switch_count="2,4";					# Some sort of csv string. I'm thinking it's the number of switches per level
    switch_radix="4,4";						# Another csv string. I'm thinking it's the radix of the switches per level. All switches within same level have same radix
