More Fixes. Segfault at very end of simulation
- Cleaned up handle_kickoff_event()
- UR traffic no longer generates messages with destination to self
- Added num_chunks config param (fixes segfault in hash chunk tracking)

--- a/src/network-workloads/conf/tracer-fattree-type2.conf
+++ b/src/network-workloads/conf/tracer-fattree-type2.conf
@@ -11,8 +11,9 @@ LPGROUPS
 PARAMS
 {
    ft_type="1";
-   packet_size="32";
+   packet_size="512";
    message_size="512";
+   chunk_size="32";
    modelnet_scheduler="fcfs";
    #modelnet_scheduler="round-robin";
    modelnet_order=( "fattree" );
