--- a/src/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
+++ b/src/network-workloads/conf/modelnet-mpi-test-dragonfly.conf
@@ -2,9 +2,9 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="36";
-      nw-lp="2";
-      modelnet_dragonfly="2";
+      repetitions="264";
+      nw-lp="4";
+      modelnet_dragonfly="4";
       modelnet_dragonfly_router="1";
    }
 }
@@ -14,15 +14,16 @@ PARAMS
    modelnet_order=( "dragonfly", "dragonfly_router");
    # scheduler options
    modelnet_scheduler="fcfs";
-   chunk_size="256";
+   chunk_size="512";
    # modelnet_scheduler="round-robin";
-   num_routers="4";
+   num_routers="8";
    local_vc_size="16384";
    global_vc_size="32768";
    cn_vc_size="16384";
    local_bandwidth="5.25";
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
-   message_size="560";
+   message_size="592";
    routing="minimal";
+   self_msg_overhead = "10";
 }
