WIP: leg work to make CODES know of the dragonfly-custom model
Change-Id: I1fb5685cd9e923ea91e0a5c55a90e68d93f4c4ef

--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -147,6 +147,7 @@ src_libcodes_a_SOURCES =  \
 	src/networks/model-net/simplenet-upd.c \
 	src/networks/model-net/torus.c \
 	src/networks/model-net/dragonfly.c \
+	src/networks/model-net/dragonfly-custom.C \
 	src/networks/model-net/slimfly.c \
 	src/networks/model-net/loggp.c \
 	src/networks/model-net/simplep2p.c \
