--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@
 
 # generated files from test runs
 ross.csv
+
+install-mastiff/include/codes/model-net-method.h
+configure.ac
+configure.ac
+configure.ac
