--- a/src/network-workloads/conf/modelnet-test-dragonfly-custom.conf
+++ b/src/network-workloads/conf/modelnet-test-dragonfly-custom.conf
@@ -2,9 +2,9 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="288";
-      server="4";
-      modelnet_dragonfly_custom="4";
+      repetitions="1440";
+      nw-lp="1";
+      modelnet_dragonfly_custom="1";
       modelnet_dragonfly_custom_router="1";
    }
 }
@@ -16,18 +16,18 @@ PARAMS
    modelnet_scheduler="fcfs";
    chunk_size="256";
    # modelnet_scheduler="round-robin";
-   num_routers="16";
-   num_groups="18";
+   num_routers="96";
+   num_groups="15";
    local_vc_size="2048";
    global_vc_size="8192";
    cn_vc_size="1024";
    local_bandwidth="5.25";
    global_bandwidth="4.7";
    cn_bandwidth="5.25";
-   message_size="368";
-   num_cns_per_router="4";
-   intra-group-connections="intra";
-   inter-group-connections="inter";
-   routing="minimal";
-   router_radix="48";
+   message_size="584";
+   num_cns_per_router="1";
+   num_global_channels="4";
+   intra-group-connections="intracray2";
+   inter-group-connections="intercray2";
+   routing="prog-adaptive";
 }
