Adding bandwidth units in modelnet test conf

--- a/tests/conf/modelnet-test.conf
+++ b/tests/conf/modelnet-test.conf
@@ -16,5 +16,6 @@ PARAMS
    modelnet_scheduler="fcfs";
    # modelnet_scheduler="round-robin";
    net_startup_ns="1.5";
+   # bandwidth is in MiB/s
    net_bw_mbps="20000";
 }
