--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -1,4 +1,4 @@
-lib_LIBRARIES += src/libcodes.a
+lib_LTLIBRARIES += src/libcodes.la
 
 BUILT_SOURCES += src/modelconfig/configparser.h \
                  src/modelconfig/configlex.h
@@ -98,7 +98,7 @@ nobase_include_HEADERS = \
 
 #codes/codes-nw-workload.h
 
-src_libcodes_a_SOURCES =  \
+src_libcodes_la_SOURCES =  \
     src/iokernellang/codesparser.h \
     src/iokernellang/codesparser.c \
     src/iokernellang/codeslexer.h \
@@ -155,11 +155,7 @@ src_libcodes_a_SOURCES =  \
 	src/networks/model-net/model-net-lp.c \
 	src/networks/model-net/model-net-sched.c \
 	src/networks/model-net/model-net-sched-impl.h \
-	src/networks/model-net/model-net-sched-impl.c \
-	src/network-workloads/model-net-mpi-replay.c \
-	src/network-workloads/model-net-synthetic.c \
-	src/network-workloads/model-net-synthetic-slimfly.c \
-	src/network-workloads/model-net-dumpi-traces-dump.c
+	src/networks/model-net/model-net-sched-impl.c 
 
 
 #codes/codes-nw-workload.h
@@ -184,10 +180,11 @@ bin_PROGRAMS += src/network-workloads/model-net-synthetic-slimfly
 src_workload_codes_workload_dump_SOURCES = \
  src/workload/codes-workload-dump.c
 
-src_network_workloads_model_net_mpi_replay_SOURCES = src/network-workloads/model-net-mpi-replay.c
-src_network_workloads_model_net_synthetic_SOURCES = src/network-workloads/model-net-synthetic.c
-src_network_workloads_model_net_synthetic_slimfly_SOURCES = src/network-workloads/model-net-synthetic-slimfly.c
-src_network_workloads_model_net_dumpi_traces_dump_SOURCES = src/network-workloads/model-net-dumpi-traces-dump.c
+src_network_workloads_model_net_mpi_replay_SOURCES = src/network-workloads/model-net-mpi-replay.c 
+src_network_workloads_model_net_synthetic_SOURCES = src/network-workloads/model-net-synthetic.c 
+src_network_workloads_model_net_synthetic_slimfly_SOURCES = src/network-workloads/model-net-synthetic-slimfly.c src/network-workloads/dummy.C 
+src_network_workloads_model_net_dumpi_traces_dump_SOURCES = src/network-workloads/model-net-dumpi-traces-dump.c src/network-workloads/dummy.C
+
 
 #bin_PROGRAMS += src/network-workload/codes-nw-test
 
