--- a/src/network-workloads/conf/modelnet-synthetic-edison.conf
+++ b/src/network-workloads/conf/modelnet-synthetic-edison.conf
@@ -2,9 +2,9 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="3200";
+      repetitions="1440";
 # name of this lp changes according to the model
-      nw-lp="4";
+      server="4";
 # these lp names will be the same for dragonfly-custom model
       modelnet_dragonfly_custom="4";
       modelnet_dragonfly_custom_router="1";
@@ -23,9 +23,9 @@ PARAMS
    # modelnet_scheduler="round-robin";
    # number of routers within each group
    # this is dictated by the dragonfly configuration files
-   num_routers="128";
+   num_routers="96";
    # number of groups in the network
-   num_groups="25";
+   num_groups="15";
 # buffer size in bytes for local virtual channels 
    local_vc_size="8192";
 #buffer size in bytes for global virtual channels 
@@ -46,9 +46,9 @@ PARAMS
 # number of global channels per router 
    num_global_channels="8";
 # network config file for intra-group connections 
-   intra-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes/scripts/gen-cray-topo/intra-custom";
+   intra-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes/scripts/gen-cray-topo/intra-edison";
 # network config file for inter-group connections
-   inter-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes/scripts/gen-cray-topo/inter-custom";
+   inter-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes/scripts/gen-cray-topo/inter-edison";
 # routing protocol to be used 
-   routing="prog-adaptive";
+   routing="adaptive";
 }
