Updating documentation and config files

--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-edison.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-edison.conf
@@ -50,5 +50,5 @@ PARAMS
 # network config file for inter-group connections
    inter-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes/scripts/gen-cray-topo/inter-edison";
 # routing protocol to be used 
-   routing="adaptive";
+   routing="non-minimal";
 }
