oops.. adding sources back for synthetic workloads

--- a/src/Makefile.subdir
+++ b/src/Makefile.subdir
@@ -181,6 +181,8 @@ bin_PROGRAMS += src/network-workloads/model-net-synthetic-slimfly
 src_workload_codes_workload_dump_SOURCES = \
  src/workload/codes-workload-dump.c
 
+src_network_workloads_model_net_dumpi_traces_dump_SOURCES = src/network-workloads/model-net-dumpi-traces-dump.c 
+src_network_workloads_model_net_synthetic_slimfly_SOURCES = src/network-workloads/model-net-synthetic-slimfly.c
 src_network_workloads_model_net_mpi_replay_SOURCES = src/network-workloads/model-net-mpi-replay.c 
 src_network_workloads_model_net_synthetic_SOURCES = src/network-workloads/model-net-synthetic.c 
 src_network_workloads_model_net_synthetic_custom_dfly_SOURCES = src/network-workloads/model-net-synthetic-custom-dfly.c 
