Updating dragonfly model to take into account multiple links connecting the chassis, updating config files and workload generator as well

--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-custom.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-custom.conf
@@ -23,7 +23,10 @@ PARAMS
    # modelnet_scheduler="round-robin";
    # number of routers within each group
    # this is dictated by the dragonfly configuration files
-   num_routers="80";
+   # intra-group rows for routers
+   num_router_rows="4";
+   # intra-group columns for routers
+   num_router_cols="20";
    # number of groups in the network
    num_groups="20";
 # buffer size in bytes for local virtual channels 
