--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-edison.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-edison.conf
@@ -22,8 +22,10 @@ PARAMS
    chunk_size="1024";
    # modelnet_scheduler="round-robin";
    # number of routers within each group
-   # this is dictated by the dragonfly configuration files
-   num_routers="96";
+   # each router row corresponds to a chassis in Cray systems
+   num_router_rows="6";
+   # each router column corresponds to a slot in a chassis
+   num_router_cols="16";
    # number of groups in the network
    num_groups="15";
 # buffer size in bytes for local virtual channels 
@@ -44,11 +46,11 @@ PARAMS
 # file
    num_cns_per_router="4";
 # number of global channels per router 
-   num_global_channels="8";
+   num_global_channels="10";
 # network config file for intra-group connections 
    intra-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes-conflict/scripts/gen-cray-topo/intra-edison";
 # network config file for inter-group connections
    inter-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes-conflict/scripts/gen-cray-topo/inter-edison";
 # routing protocol to be used 
-   routing="non-minimal";
+   routing="minimal";
 }
