--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf
@@ -23,7 +23,9 @@ PARAMS
    # modelnet_scheduler="round-robin";
    # number of routers within each group
    # this is dictated by the dragonfly configuration files
-   num_routers="96";
+   num_router_rows="6";
+   # number of router columns 
+   num_router_cols="16";
    # number of groups in the network
    num_groups="9";
 # buffer size in bytes for local virtual channels 
@@ -50,5 +52,5 @@ PARAMS
 # network config file for inter-group connections
    inter-group-connections="/Users/mmubarak/Documents/software_development/test_versions/codes/scripts/gen-cray-topo/inter-theta";
 # routing protocol to be used 
-   routing="prog-adaptive";
+   routing="adaptive";
 }
