enabling cortex-mpich when python is not enabled

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,15 +63,15 @@ src_libcodes_la_SOURCES += src/workload/methods/codes-dumpi-trace-nw-wrkld.c
 LDADD += ${DUMPI_LIBS}
 if USE_CORTEX
 if USE_PYTHON
-if USE_BOOST
-AM_CPPFLAGS += ${CORTEX_CFLAGS} -DENABLE_CORTEX=1
-LDADD += ${CORTEX_LIBS}
+if USE_CORTEX_PYTHON
+AM_CPPFLAGS += ${CORTEX_PYTHON_CFLAGS} -DENABLE_CORTEX_PYTHON=1
+LDADD += ${CORTEX_PYTHON_LIBS}
 AM_CPPFLAGS += ${PYTHON_CFLAGS}
 LDADD += ${PYTHON_LIBS}
-AM_CPPFLAGS += ${BOOST_CFLAGS}
-LDADD += ${BOOST_LIBS}
 endif
 endif
+AM_CPPFLAGS += ${CORTEX_CFLAGS} -DENABLE_CORTEX=1
+LDADD += ${CORTEX_LIBS}
 endif
 endif
 
