--- a/src/network-workloads/conf/modelnet-synthetic-fattree.conf
+++ b/src/network-workloads/conf/modelnet-synthetic-fattree.conf
@@ -2,7 +2,8 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="4";				#Number of leaf level switches
+      repetitions="4";				
+      #Number of leaf level switches
       server="2";
       modelnet_fattree="2";
       fattree_switch="2";
@@ -10,10 +11,14 @@ LPGROUPS
 }
 PARAMS
 {
-   ft_type="1";							# Only appears to be one type (type=0) in fattree.c
-   num_levels="2";						# Must be 1 < num_levels < 4
-   switch_count="2,4";					# Some sort of csv string. I'm thinking it's the number of switches per level
-   switch_radix="4,4";						# Another csv string. I'm thinking it's the radix of the switches per level. All switches within same level have same radix
+   # Only appears to be one type (type=0) in fattree.c
+   ft_type="1";							
+   # Must be 1 < num_levels < 4
+   num_levels="2";						
+   # Some sort of csv string. I'm thinking it's the number of switches per level
+   switch_count="2,4";					
+   # Another csv string. I'm thinking it's the radix of the switches per level. All switches within same level have same radix
+   switch_radix="4,4";						
    packet_size="512";
    modelnet_order=( "fattree" );
    # scheduler options
