--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -32,6 +32,7 @@ TESTS += tests/lp-io-test.sh \
  tests/modelnet-test-dragonfly.sh \
  tests/modelnet-test-slimfly.sh \
  tests/modelnet-test-dragonfly-synthetic.sh \
+ tests/modelnet-test-fattree-synthetic.sh \
  tests/modelnet-test-slimfly-synthetic.sh \
  tests/modelnet-test-dragonfly-custom-synthetic.sh \
  tests/modelnet-p2p-bw-loggp.sh \
