--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-custom.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-custom.conf
@@ -49,9 +49,9 @@ PARAMS
 # number of global channels per router 
    num_global_channels="10";
 # network config file for intra-group connections 
-   intra-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes-conflict/scripts/gen-cray-topo/intra-custom";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-custom";
 # network config file for inter-group connections
-   inter-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes-conflict/scripts/gen-cray-topo/inter-custom";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-custom";
 # routing protocol to be used 
    routing="prog-adaptive";
 }
