--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-edison.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-edison.conf
@@ -48,9 +48,9 @@ PARAMS
 # number of global channels per router 
    num_global_channels="10";
 # network config file for intra-group connections 
-   intra-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes-conflict/scripts/gen-cray-topo/intra-edison";
+   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-edison";
 # network config file for inter-group connections
-   inter-group-connections="/Users/mmubarak/Documents/software_development/dragonfly-cray/codes-conflict/scripts/gen-cray-topo/inter-edison";
+   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-edison";
 # routing protocol to be used 
    routing="minimal";
 }
