--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -12,6 +12,7 @@ check_PROGRAMS += tests/lp-io-test \
  src/network-workloads/model-net-synthetic \
  src/network-workloads/model-net-synthetic-fattree \
  src/network-workloads/model-net-synthetic-slimfly \
+ src/network-workloads/model-net-synthetic-custom-dfly \
  tests/concurrent-msg-recv tests/modelnet-simplep2p-test \
  tests/modelnet-test-collective \
  tests/modelnet-prio-sched-test \
@@ -31,6 +32,7 @@ TESTS += tests/lp-io-test.sh \
  tests/modelnet-test-dragonfly.sh \
  tests/modelnet-test-slimfly.sh \
  tests/modelnet-test-dragonfly-synthetic.sh \
+ tests/modelnet-test-dragonfly-custom-synthetic.sh \
  tests/modelnet-test-fattree-synthetic.sh \
  tests/modelnet-test-slimfly-synthetic.sh \
  tests/modelnet-p2p-bw-loggp.sh \
