--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf.in
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf.in
@@ -48,9 +48,9 @@ PARAMS
 # number of global channels per router 
    num_global_channels="10";
 # network config file for intra-group connections 
-   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-theta";
+   intra-group-connections="@abs_srcdir@/intra-theta";
 # network config file for inter-group connections
-   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-theta";
+   inter-group-connections="@abs_srcdir@/inter-theta";
 # routing protocol to be used 
    routing="adaptive";
 }
