--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -28,13 +28,17 @@ TESTS += tests/lp-io-test.sh \
  tests/map-ctx-test.sh \
  tests/modelnet-test.sh \
  tests/modelnet-test-torus.sh \
+ tests/modelnet-test-torus-traces.sh \
  tests/modelnet-test-loggp.sh \
  tests/modelnet-test-dragonfly.sh \
  tests/modelnet-test-slimfly.sh \
  tests/modelnet-test-dragonfly-synthetic.sh \
+ tests/modelnet-test-dragonfly-traces.sh \
  tests/modelnet-test-dragonfly-custom-synthetic.sh \
+ tests/modelnet-test-dragonfly-custom-traces.sh \
  tests/modelnet-test-fattree-synthetic.sh \
  tests/modelnet-test-slimfly-synthetic.sh \
+ tests/modelnet-test-slimfly-traces.sh \
  tests/modelnet-p2p-bw-loggp.sh \
  tests/modelnet-prio-sched-test.sh
 
@@ -57,9 +61,15 @@ EXTRA_DIST += tests/lp-io-test.sh \
  tests/expected/mapping_test.out \
  tests/modelnet-test.sh \
  tests/modelnet-test-torus.sh \
+ tests/modelnet-test-torus-traces.sh \
+ tests/modelnet-test-dragonfly-custom-synthetic.sh \
+ tests/modelnet-test-dragonfly-custom-traces.sh \
  tests/modelnet-test-loggp.sh \
  tests/modelnet-test-dragonfly.sh \
+ tests/modelnet-test-dragonfly-traces.sh \
  tests/modelnet-test-slimfly.sh \
+ tests/modelnet-test-slimfly-synthetic.sh \
+ tests/modelnet-test-slimfly-traces.sh \
  tests/modelnet-p2p-bw-loggp.sh \
  tests/modelnet-prio-sched-test.sh \
  tests/conf/concurrent_msg_recv.conf \
