--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf
@@ -37,7 +37,7 @@ PARAMS
 #bandwidth in GiB/s for local channels 
    local_bandwidth="5.25";
 # bandwidth in GiB/s for global channels 
-   global_bandwidth="18.75";
+   global_bandwidth="4.69";
 # bandwidth in GiB/s for compute node-router channels 
    cn_bandwidth="16.0";
 # ROSS message size 
@@ -52,5 +52,5 @@ PARAMS
 # network config file for inter-group connections
    inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-theta";
 # routing protocol to be used 
-   routing="adaptive";
+   routing="prog-adaptive";
 }
