updates to dragonfly custom: selecting one path among multiple available to avoid intra-group congestion, enabling multiple connections within a router row, fixing lp-io radix bug

--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-custom.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-custom.conf
@@ -2,11 +2,11 @@ LPGROUPS
 {
    MODELNET_GRP
    {
-      repetitions="1600";
+      repetitions="1520";
 # name of this lp changes according to the model
-      nw-lp="4";
+      nw-lp="8";
 # these lp names will be the same for dragonfly-custom model
-      modelnet_dragonfly_custom="4";
+      modelnet_dragonfly_custom="8";
       modelnet_dragonfly_custom_router="1";
    }
 }
@@ -24,11 +24,11 @@ PARAMS
    # number of routers within each group
    # this is dictated by the dragonfly configuration files
    # intra-group rows for routers
-   num_router_rows="4";
+   num_router_rows="1";
    # intra-group columns for routers
-   num_router_cols="20";
+   num_router_cols="40";
    # number of groups in the network
-   num_groups="20";
+   num_groups="38";
 # buffer size in bytes for local virtual channels 
    local_vc_size="8192";
 #buffer size in bytes for global virtual channels 
@@ -38,20 +38,24 @@ PARAMS
 #bandwidth in GiB/s for local channels 
    local_bandwidth="5.25";
 # bandwidth in GiB/s for global channels 
-   global_bandwidth="18.75";
+   global_bandwidth="4.69";
 # bandwidth in GiB/s for compute node-router channels 
    cn_bandwidth="8.0";
+# Number of row channels
+   num_row_chans="2";
+# Number of column channels
+   num_col_chans="1";
 # ROSS message size 
    message_size="592";
 # number of compute nodes connected to router, dictated by dragonfly config
 # file
-   num_cns_per_router="4";
+   num_cns_per_router="8";
 # number of global channels per router 
-   num_global_channels="10";
+   num_global_channels="4";
 # network config file for intra-group connections 
-   intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-custom-upd";
+   intra-group-connections="/Users/mmubarak/Documents/software_development/codes/scripts/gen-cray-topo/intratest";
 # network config file for inter-group connections
-   inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-custom-upd";
+   inter-group-connections="/Users/mmubarak/Documents/software_development/codes/scripts/gen-cray-topo/intertest";
 # routing protocol to be used 
    routing="prog-adaptive";
 }
