--- a/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf
+++ b/src/network-workloads/conf/dragonfly-custom/modelnet-test-dragonfly-theta.conf
@@ -46,11 +46,11 @@ PARAMS
 # file
    num_cns_per_router="4";
 # number of global channels per router 
-   num_global_channels="10";
+   num_global_channels="4";
 # network config file for intra-group connections 
    intra-group-connections="../src/network-workloads/conf/dragonfly-custom/intra-theta";
 # network config file for inter-group connections
    inter-group-connections="../src/network-workloads/conf/dragonfly-custom/inter-theta";
 # routing protocol to be used 
-   routing="prog-adaptive";
+   routing="adaptive";
 }
