--- a/tests/Makefile.subdir
+++ b/tests/Makefile.subdir
@@ -13,6 +13,7 @@ check_PROGRAMS += tests/lp-io-test \
  src/network-workloads/model-net-synthetic-fattree \
  src/network-workloads/model-net-synthetic-slimfly \
  src/network-workloads/model-net-synthetic-custom-dfly \
+ src/network-workloads/model-net-mpi-replay	\
  tests/concurrent-msg-recv tests/modelnet-simplep2p-test \
  tests/modelnet-test-collective \
  tests/modelnet-prio-sched-test \
@@ -28,17 +29,13 @@ TESTS += tests/lp-io-test.sh \
  tests/map-ctx-test.sh \
  tests/modelnet-test.sh \
  tests/modelnet-test-torus.sh \
- tests/modelnet-test-torus-traces.sh \
  tests/modelnet-test-loggp.sh \
  tests/modelnet-test-dragonfly.sh \
  tests/modelnet-test-slimfly.sh \
  tests/modelnet-test-dragonfly-synthetic.sh \
- tests/modelnet-test-dragonfly-traces.sh \
  tests/modelnet-test-dragonfly-custom-synthetic.sh \
- tests/modelnet-test-dragonfly-custom-traces.sh \
  tests/modelnet-test-fattree-synthetic.sh \
  tests/modelnet-test-slimfly-synthetic.sh \
- tests/modelnet-test-slimfly-traces.sh \
  tests/modelnet-p2p-bw-loggp.sh \
  tests/modelnet-prio-sched-test.sh
 
