Resolving issues with model net magic number initialization

--- a/src/network-workloads/conf/workloads.conf
+++ b/src/network-workloads/conf/workloads.conf
@@ -1,3 +1,2 @@
-216 /path/to/AMG/df_AMG_n216_dumpi/dumpi-2014.03.03.14.55.23- 
-125 /path/to/Multigrid/MultiGrid_C_n125_dumpi/dumpi-2014.03.06.23.48.13-
-100 /path/to/Crystal_Router/100/dumpi--2014.04.23.12.12.05-
+216 synthetic
+125 /Users/mmubarak/Documents/software_development/df_traces/Multigrid/MultiGrid_C_n125_dumpi/dumpi-2014.03.06.23.48.13-
