--- a/configure.ac
+++ b/configure.ac
@@ -113,16 +113,15 @@ AC_SUBST(RECORDER_CPPFLAGS)
 AC_ARG_WITH([dumpi],[AS_HELP_STRING([--with-dumpi@<:@=DIR@:>@],
                         [location of Dumpi installation])])
 if test "x${with_dumpi}" != "x" ; then
-	AC_CHECK_FILE([${with_dumpi}/lib/libundumpi.la],
-                  AM_CONDITIONAL(USE_DUMPI, true),
-                  AC_MSG_ERROR(Could not find libundumpi.la))
+	CFLAGS="-I${with_dumpi}/include"
+	LIBS="-L${with_dumpi}/lib/ -lundumpi"
+    AC_CHECK_LIB([undumpi],
+                 [undumpi_open], [], [AC_MSG_ERROR(Could not find dumpi)])
+    AM_CONDITIONAL(USE_DUMPI, true)
 	DUMPI_CFLAGS="-I${with_dumpi}/include"
-#	DUMPI_CFLAGS+=" -I${with_dumpi}/include/dumpi/common" 
-#	DUMPI_CFLAGS+=" -I${with_dumpi}/include/dumpi/libdumpi"
-#	DUMPI_CFLAGS+=" -I${with_dumpi}/include/dumpi/libundumpi"
 	DUMPI_LIBS="-L${with_dumpi}/lib/ -lundumpi"
-	AC_SUBST(DUMPI_LIBS)
-	AC_SUBST(DUMPI_CFLAGS)
+    AC_SUBST(DUMPI_LIBS)
+    AC_SUBST(DUMPI_CFLAGS)
 else
 	AM_CONDITIONAL(USE_DUMPI, false)
 fi
